fixed side whitespace

--- a/hw3css.css
+++ b/hw3css.css
@@ -4,15 +4,18 @@
 body {
   font-family:Cabin, "Cabin Condensed", "Cabin Condensed Medium", "Cabin Condensed SemiBold", "Cabin Medium", "Cabin SemiBold", Boho;
   font-size: 16px;
-  line-height: 1.5;
+  line-height: .8;
   background-color: #f0f0f0; /* Set a default background color */
   color: #333; /* Set a default text color */
 }
+/* general containers for layour */
+
+.containerall {}
+
 
 .container {
-  width: 100vw;/* Full viewport width for each strip */
+  width: 100vw;
   display: flex;
-	padding: 30px;
   align-items: center;
   text-align:inherit;
 }
@@ -20,14 +23,16 @@ body {
 .containervert{
 	height:100vw;
 	display: flex;
-	padding: 30px;
+	padding: 0px;
   align-items: center;
   text-align:inherit;
 }
 .half {
-  flex: 1; /* This will make both halves equal in width */
+  flex: 1;
+	padding: 30px;
+	/* This will make both halves equal in width */
 }
-
+/* Overall horizontal strips for each section */
 .strip {
     width: 100vw; /* Full viewport width for each strip */
     align-items: center;
@@ -37,13 +42,12 @@ body {
     color: #fff; /* Text color */
     font-size: 2rem;
 }
-
+/* specifics for each strip, in order from top to bottom */
 #section1 {
     background-image: url(media/lake-7753345_1280.jpg);
     align-items: center;
     display: inline-flex;
 	background-size: cover;
-	padding-bottom: 40px;
 	background-color: rgba(0,0,0,0.40);
 	background-blend-mode: overlay;
 }
@@ -88,12 +92,14 @@ body {
   background-color: #e74c3c;
 	display: flex;
 }
+
+/* specific strip text header and p values */
 .strip h1{
-	padding-top: 10px;
 	font-size: 180px;
 	position:relative;
 	color: white;
-  padding: 20px; /* Adjust padding to control item size and spacing */
+	line-height: .1;
+	padding-top:50px;
 }
 .strip h2{
 	font-size: 60px;
@@ -101,6 +107,22 @@ body {
 }
 
 
+
+
+.grid-item {
+  background-color: #3498db; /* Change the background color */
+	margin-left: 30px;
+	margin-right: 30px;
+  text-align: center;
+	
+	width: 350px;
+	height: 500px;
+  color: #ffffff; /* Text color */
+}
+.grid-container{
+	width: 100%;
+	justify-content: center;
+}
 #gridsection5{
 	
 }
@@ -112,17 +134,15 @@ body {
 	align-self: center;
 }
 
-.grid-item {
-  background-color: #3498db; /* Change the background color */
-	margin:20px;
-  padding-left: 40px; 
-padding-right:40px;
-  text-align: center;
-	
-	width: 300px;
-	height: 500px;
-  color: #ffffff; /* Text color */
+#gridsection4{
+    place-items: stretch center;
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    grid-template-rows: auto auto auto auto;
+	align-self: center;
 }
+
+/* grid sections for section 3 or the tours section*/
 #grid1{
     background-color: black;
     background-image: url(media/architecture-3528885_1280.jpg);
@@ -130,7 +150,42 @@ padding-right:40px;
 	position:relative;
 	
 }
+
+#grid2{
+    background-color: black;
+    background-image: url("media/sunrise-7794922_1280.jpg");
+	background-size: cover;
+	position:relative;
+	
+}
+
+#grid3{
+    background-color: black;
+    background-image: url("media/detroit-3700847_1280.jpg");
+	background-size: cover;
+	position:relative;
+	
+}
+
+#grid5{
+	width: 200px;
+	height:200px;
+	border-radius: 200px;
+	padding:0px 0;
+	text-align: center;
+	line-height: 2.0;
+	background-color:black;
+}
+
+.grid-item h2{
+	font-size: 20px;
+	text-align: center;
+	padding-top: 30px;
+
+}
+/* this is the gradient for text visibility on grids 1,2 ,3*/
 .grid-item-text{
+	line-height: 2.5;
     height: 25%;
     width: 100%;
     position: absolute;
@@ -139,7 +194,7 @@ padding-right:40px;
     background-image: -webkit-linear-gradient(90deg,rgba(0,0,0,1.00) 0%,rgba(0,0,0,0.00) 100%), url(url);
     background-image: -moz-linear-gradient(90deg,rgba(0,0,0,1.00) 0%,rgba(0,0,0,0.00) 100%), url(url);
     background-image: -o-linear-gradient(90deg,rgba(0,0,0,1.00) 0%,rgba(0,0,0,0.00) 100%), url(url);
-    background-image: linear-gradient(0deg,rgba(0,0,0,1.00) 0%,rgba(0,0,0,0.00) 100%), url(url);
+    background-image: linear-gradient(0deg,rgba(0,0,0,.90) 20%,rgba(0,0,0,0.00) 100%), url(url);
     background-blend-mode: multiply;
 }
 
